--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^6.1.7",
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "5.13.4",
     "@mui/system": "^5.14.11",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.35.0",
     "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
