--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mui/system": "^5.14.11",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.35.0",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-mui-sidebar": "^1.3.8",
     "react-router": "^6.16.0",
