--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.7",
     "@mui/system": "^5.14.11",
+    "@mui/x-date-pickers": "^7.22.2",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.35.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^9.0.0",
