--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-
   "scripts": {
     "start": "nodemon server.js",
     "deploy": "node server.js",
@@ -15,8 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.1",
+    "express-token": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "uuid": "^11.0.3"
   }
