--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "request-ip": "^3.3.0"
   }
 }
