--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
+    "useragent": "^2.3.0",
     "uuid": "^11.0.3"
   }
 }
