--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.133",
-    "@mui/material": "^6.1.10",
+    "@mui/material": "^5.15.14",
     "@mui/system": "^5.14.11",
     "@mui/x-date-pickers": "^7.22.2",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.35.0",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
