--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.35.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
@@ -27,6 +28,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
