--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
+    "express-rate-limit": "^7.5.0",
     "if-env": "^1.0.4",
+    "multer": "^1.4.5-lts.1",
     "request-ip": "^3.3.0"
   }
 }
