--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-token": "^0.1.0",
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
