--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^9.0.0",
     "prop-types": "^15.8.1",
+    "public-ip": "^7.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.6",
