--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "deploy": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
