--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "public-ip": "^7.0.1",
     "react": "^19.0.0",
