--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "install": "npm install --prefix client && npm install --prefix server",
     "build": "npm run build --prefix client",
-    "start": "npm run build && node server/server.js", 
+    "start": "npm run build && npm run server",
     "server": "npm start --prefix server",
     "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
